apps/automation/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: automation
spec:
  selector:
    app: homeassistant
  ports:
  - name: http
    port: 8123
    targetPort: 8123
  type: ClusterIP
